update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: A-Hausa-botanical-vocabulary_74245
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74245-h/images/cover.jpg
 creator:
   author:
     agent_name: Dalziel, J. M. (John McEwen)
@@ -9,6 +12,8 @@ creator:
     gutenberg_agent_id: '57409'
     url: http://www.gutenberg.org/2009/agents/57409
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74245#A-Hausa-botanical-vocabulary
 gutenberg_issued: '2024-08-13'
 gutenberg_type: Text
 identifiers:
